(lang dune 1.11)
(package
  (name unicode)
  (synopsis "Simple unicode library.")
  (description "Code mapping and display to be used in parsers.")
)
(authors "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(maintainers "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(generate_opam_files true)
